# IMAGE_ENGINEERING_ECNU

./: .env.example  README.md  book.yml  mkdocs.yml  requirements.txt  wrangler.jsonc
.claude/: settings.local.json
docs/: index.md  segmentation_demo.html
docs/chapters/: ch01-image-formation.md  ch02-enhancement.md  ch03-sharpening.md  ch04-segmentation.md  ch05-features.md
minerupress/: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
minerupress/.github/workflows/: ci.yml  release.yml
minerupress/book_template/: Makefile
minerupress/docs/: README_EN.md  index.md
minerupress/docs/guide/: cloud-api-and-deploy.md  configuration.md  export-pipeline.md  getting-started.md  install-and-upgrade.md  plugins.md  release.md  validation-and-troubleshooting.md  workflow-run-a-book.md
minerupress/minerupress/: __init__.py  api_client.py  cli.py  core.py  fingerprint.py  headings.py  loader.py
minerupress/minerupress/book_template/: book.yml  mkdocs.yml
minerupress/minerupress/book_template/docs/chapters/: ch01-overview.md
minerupress/minerupress/plugins/: __init__.py  base.py  cf_pages.py  cjk_spacing.py  qr_filter.py
minerupress/skills/minerupress/: SKILL.md
minerupress/skills/minerupress/agents/: openai.yaml
minerupress/skills/minerupress/references/: book-yml.md
minerupress/tests/: test_cli.py  test_core.py  test_headings.py  test_loader.py  test_template.py
python-tutorial/: build_ch05_examples.py  edge_detection.ipynb  ex1.ipynb  ex10_ch02.ipynb  ex11_ch05.ipynb  ex12_ch05.ipynb  ex1_ch01.ipynb  ex1_ch02.ipynb  ex1_ch05.ipynb  ex2.ipynb  ex2_ch01.ipynb  ex2_ch05.ipynb  ex3_ch01.ipynb  ex3_ch02.ipynb  ex4_ch01.ipynb  ex4_ch02.ipynb  ex5_ch01.ipynb  ex6_ch01.ipynb  ex7_ch02.ipynb  ex8_ch02.ipynb  ex9_ch02.ipynb  image_sharpen.ipynb  test.ipynb
resources/mineru/image-engineering_full/: 7a525171-4ed4-4ef1-9f12-989d9b2c583a_content_list.json  block_list.json  full.md  layout.json  (+8 more)
site/: 404.html  index.html
site/search/: search_index.json
site/stylesheets/: extra.css
(+5 files in other folders)
